# bspwm

./: .gitignore  CMakeLists.txt
